<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCliente">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5FAF7"
        android:padding="@dimen/header_padding">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/add_client_title"
                android:textSize="@dimen/spacing_large"
                android:textStyle="bold"
                android:textColor="#2B7A4B"
                android:layout_marginBottom="@dimen/header_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etNombreCliente"
                android:hint="@string/add_client_name_hint"
                android:background="@drawable/bg_input"
                android:padding="@dimen/card_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etCorreoCliente"
                android:hint="@string/add_client_email_hint"
                android:inputType="textEmailAddress"
                android:background="@drawable/bg_input"
                android:padding="@dimen/card_padding"
                android:layout_marginTop="@dimen/card_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etTelefonoCliente"
                android:hint="@string/add_client_phone_hint"
                android:inputType="phone"
                android:background="@drawable/bg_input"
                android:padding="@dimen/card_padding"
                android:layout_marginTop="@dimen/card_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnGuardarCliente"
                android:text="@string/add_client_save_button"
                android:textColor="@color/blanco"
                android:backgroundTint="#2B7A4B"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>